atualização na pagina sobre nós

--- a/ProjetoSiteFord-main/index.html
+++ b/ProjetoSiteFord-main/index.html
@@ -34,20 +34,36 @@
     </header>
 
     <main>
-        <div class="carrossel-wrapper">
-        <div class="carrossel"> </div>
         <div class="background_carrossel"> </div>
         <!-- Botões presentes no carrosel -->
-         <div class="botao_carrossel">
-        <input type="radio" name="botao_carrossel" id="botao_carrossel1">
-        <input type="radio" name="botao_carrossel" id="botao_carrossel2">
-        <input type="radio" name="botao_carrossel" id="botao_carrossel3">
+        <div class="botao_carrossel">
+            <input type="radio" name="botao_carrossel" id="botao_carrossel1">
+            <input type="radio" name="botao_carrossel" id="botao_carrossel2">
+            <input type="radio" name="botao_carrossel" id="botao_carrossel3">
+            <input type="radio" name="botao_carrossel" id="botao_carrossel4">
         </div>
-        
         <div class="titulo_carrossel"> </div>
+
     </main>
 
     <script src="js/carrosel.js"></script>
+
+    <footer>
+        <div class="redes_sociais">
+            <a href="https://www.facebook.com/FordBrasil/?locale=pt_BR">
+                <img src="img/facebook-logo.png" alt="LogoFacebook"> </a>
+            <a href="https://www.youtube.com/@fordbrasil">
+                <img src="img/youtube-logo.webp" alt="LogoYoutube"> </a>
+            <a href="https://www.instagram.com/fordbrasil/">
+                <img src="img/instagram-logo.webp" alt="LogoInstagram"> </a>
+            <a href="https://www.tiktok.com/@fordbrasil">
+                <img src="img/tiktok-logo.png" alt="LogoTiktok"> </a>
+        </div>
+        <div class="copyright_ford">
+            <a href="https://www.ford.com.br/copyright/">
+                <img src="img/LogoFord-Copyright.png"> </a>
+        </div>
+    </footer>
 
 </body>
 
