Edição no Sobre nos

--- a/ProjetoSiteFord-main/index.html
+++ b/ProjetoSiteFord-main/index.html
@@ -34,13 +34,15 @@
     </header>
 
     <main>
+
+        </div>
         <div class="background_carrossel"> </div>
         <!-- Botões presentes no carrosel -->
         <div class="botao_carrossel">
-            <input type="radio" name="botao_carrossel" id="botao_carrossel1">
-            <input type="radio" name="botao_carrossel" id="botao_carrossel2">
-            <input type="radio" name="botao_carrossel" id="botao_carrossel3">
-            <input type="radio" name="botao_carrossel" id="botao_carrossel4">
+            <button class="controle_carrossel" data-index="0"></button>
+            <button class="controle_carrossel" data-index="1"></button>
+            <button class="controle_carrossel" data-index="2"></button>
+            <button class="controle_carrossel" data-index="3"></button>
         </div>
         <div class="titulo_carrossel"> </div>
 
@@ -53,9 +55,9 @@
             <a href="https://www.facebook.com/FordBrasil/?locale=pt_BR">
                 <img src="img/facebook-logo.png" alt="LogoFacebook"> </a>
             <a href="https://www.youtube.com/@fordbrasil">
-                <img src="img/youtube-logo.webp" alt="LogoYoutube"> </a>
+                <img src="img/youtube-logo.jpg" alt="LogoYoutube"> </a>
             <a href="https://www.instagram.com/fordbrasil/">
-                <img src="img/instagram-logo.webp" alt="LogoInstagram"> </a>
+                <img src="img/instagram-logo.jpg" alt="LogoInstagram"> </a>
             <a href="https://www.tiktok.com/@fordbrasil">
                 <img src="img/tiktok-logo.png" alt="LogoTiktok"> </a>
         </div>
