alterações no Sobre Nos

--- a/ProjetoSiteFord-main/index.html
+++ b/ProjetoSiteFord-main/index.html
@@ -46,6 +46,12 @@
         </div>
         <div class="titulo_carrossel"> </div>
 
+        <div class="textos_sobre_nos">
+            <h1> Encontre o Ford que combina com você. </h1>
+            <div class="botao_redireciona_veiculos">
+                <button onclick="window.location.href='veiculos.html'"> Veja nossos Veículos </button>
+            </div>
+        </div>
     </main>
 
     <script src="js/carrosel.js"></script>
