Adição de novos elementos no Sobre Nos

--- a/ProjetoSiteFord-main/index.html
+++ b/ProjetoSiteFord-main/index.html
@@ -35,26 +35,37 @@
 
     <main>
 
-        </div>
         <div class="background_carrossel"> </div>
+        <div class="titulo_carrossel"> </div>
         <!-- Botões presentes no carrosel -->
         <div class="botao_carrossel">
             <button class="controle_carrossel" data-index="0"></button>
             <button class="controle_carrossel" data-index="1"></button>
             <button class="controle_carrossel" data-index="2"></button>
-            <button class="controle_carrossel" data-index="3"></button>
         </div>
-        <div class="titulo_carrossel"> </div>
 
-        <div class="textos_sobre_nos">
+        <div class="textos_redireciona_veiculos">
             <h1> Encontre o Ford que combina com você! </h1>
             <div class="botao_redireciona_veiculos">
-                <button onclick="window.location.href='veiculos.html'"> Veja nossos Veículos </button>
+                <button onclick="window.location.href='veiculos.html'"> Ver modelos </button>
             </div>
+        </div>
+
+        <div class="texto-noticias-ford">
+            <h1> Últimas Noticias </h1>
+            <p> Acompanhe as últimas noticias da Ford </p>
+        </div>
+        <div class="imagem-noticias-ford">
+            <img src="img/imagem-teste.jfif" alt="Noticia 1">
+            <img src="img/imagem-teste.jfif" alt="Noticia 2">
+        </div>
+        <div class="botao-noticias-ford">
+            <button> </button>
+            <button> </button>
         </div>
     </main>
 
-    <script src="js/carrosel.js"></script>
+    <script src="js/carrossel.js"></script>
 
     <footer>
         <div class="redes_sociais">
