--- a/ProjetoSiteFord-main/index.html
+++ b/ProjetoSiteFord-main/index.html
@@ -60,8 +60,8 @@
             <img src="img/imagem-teste.jfif" alt="Noticia 2">
         </div>
         <div class="botao-noticias-ford">
-            <button> </button>
-            <button> </button>
+            <button onclick="window.location.href=''"> </button>
+            <button onclick="window.location.href=''"> </button>
         </div>
     </main>
 
