Atualizações no nome das variaveis, e adição de um novo slider em trabalho

--- a/index.html
+++ b/index.html
@@ -15,70 +15,78 @@
 
     <header>
         <!-- Menu de opções principais canto direito do Header -->
-        <div class="menu_geral">
+        <div class="menu-geral">
             <a href="index.html"> Sobre Nós </a>
             <a href="veiculos.html"> Veículos </a>
         </div>
 
         <!-- Logo principal da Ford, centralizado no Header -->
-        <div class="logo_principal_ford">
+        <div class="logo-principal-ford">
             <a href="index.html">
                 <img src="img/LogoFord.png" alt="Logo Empresa">
             </a>
         </div>
 
         <!-- Login no site, canto direito do Header -->
-        <div class="login_ford">
+        <div class="login-ford">
             <a href="login.html"> Login </a>
         </div>
     </header>
 
     <main>
 
-        <div class="background_carrossel"> </div>
-        <div class="titulo_carrossel"> </div>
-        <!-- Botões presentes no carrosel -->
-        <div class="botao_carrossel">
-            <button class="controle_carrossel" data-index="0"></button>
-            <button class="controle_carrossel" data-index="1"></button>
-            <button class="controle_carrossel" data-index="2"></button>
+        <div class="background-carrossel"> </div>
+        <div class="titulo-carrossel"> </div>
+        <!-- Botões presentes no carrossel -->
+        <div class="botao-carrossel">
+            <button class="controle-carrossel" data-index="0"></button>
+            <button class="controle-carrossel" data-index="1"></button>
+            <button class="controle-carrossel" data-index="2"></button>
         </div>
 
-        <div class="textos_redireciona_veiculos">
+        <div class="textos-redireciona-veiculos">
             <h1> Encontre o Ford que combina com você! </h1>
-            <div class="botao_redireciona_veiculos">
-                <button onclick="window.location.href='veiculos.html'"> Ver modelos </button>
-            </div>
+        </div>
+        <div class="veiculos-slider"> </div>
+        <div class="lista-veiculos-slider"> </div>
+        <!-- Botões presentes no carrossel -->
+        <div class="botao-slider">
+            <button class="controle-slider" data-index="0"></button>
+            <button class="controle-slider" data-index="1"></button>
+        </div>
+        <div class="botao-redireciona-veiculos">
+            <button onclick="window.location.href='veiculos.html'"> Veja os modelos </button>
         </div>
 
         <div class="texto-noticias-ford">
-            <h1> Últimas Noticias </h1>
-            <p> Acompanhe as últimas noticias da Ford </p>
+            <h1> Últimas notícias </h1>
+            <p> Acompanhe as últimas notícias da Ford </p>
         </div>
         <div class="imagem-noticias-ford">
-            <img src="img/imagem-teste.jfif" alt="Noticia 1">
-            <img src="img/imagem-teste.jfif" alt="Noticia 2">
+            <img src="img/imagem-teste.jfif" alt="Notícia 1">
+            <img src="img/imagem-teste.jfif" alt="Notícia 2">
         </div>
         <div class="botao-noticias-ford">
             <button onclick="window.location.href=''"> </button>
             <button onclick="window.location.href=''"> </button>
         </div>
+
     </main>
 
     <script src="js/carrossel.js"></script>
 
     <footer>
-        <div class="redes_sociais">
+        <div class="redes-sociais">
             <a href="https://www.facebook.com/FordBrasil/?locale=pt_BR">
-                <img src="img/facebook-logo.png" alt="LogoFacebook"> </a>
+                <img src="img/facebook-logo.png" alt="Logo Facebook"> </a>
             <a href="https://www.youtube.com/@fordbrasil">
-                <img src="img/youtube-logo.jpg" alt="LogoYoutube"> </a>
+                <img src="img/youtube-logo.jpg" alt="Logo Youtube"> </a>
             <a href="https://www.instagram.com/fordbrasil/">
-                <img src="img/instagram-logo.jpg" alt="LogoInstagram"> </a>
+                <img src="img/instagram-logo.jpg" alt="Logo Instagram"> </a>
             <a href="https://www.tiktok.com/@fordbrasil">
-                <img src="img/tiktok-logo.png" alt="LogoTiktok"> </a>
+                <img src="img/tiktok-logo.png" alt="Logo Tiktok"> </a>
         </div>
-        <div class="copyright_ford">
+        <div class="copyright-ford">
             <a href="https://www.ford.com.br/copyright/">
                 <img src="img/LogoFord-Copyright.png"> </a>
         </div>
