--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/sytle.css"> <!-- CSS Estilo -->
+    <link rel="stylesheet" href="css/sobre.css"> <!-- CSS Sobre -->
     <link href="https://fonts.cdnfonts.com/css/ford" rel="stylesheet"> <!-- Fonte -->
 
     <title> Ford </title>
@@ -14,22 +15,22 @@
 
     <header>
         <!-- Menu de opções principais canto direito do Header -->
-        <div class="menu_geral">
-        <a href="index.html"> Sobre Nós </a>
-        <a href="veiculos.html"> Veículos </a>
+        <div class="menu-geral">
+            <a href="index.html"> Sobre Nós </a>
+            <a href="veiculos.html"> Veículos </a>
         </div>
-        
+
         <!-- Logo principal da Ford, centralizado no Header -->
-        <div class="logo_principal_ford">
+        <div class="logo-principal-ford">
             <a href="index.html">
-            <img src="img/LogoFord.png" alt="Logo Empresa">
+                <img src="img/LogoFord.png" alt="Logo Empresa">
             </a>
         </div>
 
         <!-- Login no site, canto direito do Header -->
-         <div class="login_ford">
+        <div class="login-ford">
             <a href="login.html"> Login </a>
-         </div>
+        </div>
     </header>
 
 </body>
