Atualização, funcionamento do segundo slider

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <main>
 
+        <!-- Definições do carrossel do background-->
         <div class="background-carrossel"> </div>
         <div class="titulo-carrossel"> </div>
         <!-- Botões presentes no carrossel -->
@@ -44,6 +45,7 @@
             <button class="controle-carrossel" data-index="2"></button>
         </div>
 
+        <!-- Definições slider que apresenta carros para veiculos -->
         <div class="textos-redireciona-veiculos">
             <h1> Encontre o Ford que combina com você! </h1>
         </div>
@@ -51,13 +53,14 @@
         <div class="lista-veiculos-slider"> </div>
         <!-- Botões presentes no carrossel -->
         <div class="botao-slider">
-            <button class="controle-slider" data-index="0"></button>
-            <button class="controle-slider" data-index="1"></button>
+            <button class="controle-esquerda"> < </button>
+            <button class="controle-direita"> > </button>
         </div>
         <div class="botao-redireciona-veiculos">
             <button onclick="window.location.href='veiculos.html'"> Veja os modelos </button>
         </div>
 
+        <!-- Definições do canal de noticias -->
         <div class="texto-noticias-ford">
             <h1> Últimas notícias </h1>
             <p> Acompanhe as últimas notícias da Ford </p>
@@ -76,6 +79,8 @@
     <script src="js/carrossel.js"></script>
 
     <footer>
+
+        <!-- Definições do footer rede sociais e logo para copyright-->
         <div class="redes-sociais">
             <a href="https://www.facebook.com/FordBrasil/?locale=pt_BR">
                 <img src="img/facebook-logo.png" alt="Logo Facebook"> </a>
