Atualizar botoes em sobre nos

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         <!-- Botões presentes no carrossel -->
         <div class="botao-slider">
             <button class="controle-esquerda"> < </button>
-            <button class="controle-direita"> > </button>
+            <button class="controle-direita"> ➤ </button>
         </div>
         <div class="botao-redireciona-veiculos">
-            <button onclick="window.location.href='veiculos.html'"> Veja os modelos </button>
+            <button onclick="window.location.href='veiculos.html'"> Veja nossos veículos > </button>
         </div>
 
         <!-- Definições do canal de noticias -->
