Atualizações basicas no index

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         <div class="lista-veiculos-slider"> </div>
         <!-- Botões presentes no carrossel -->
         <div class="botao-slider">
-            <button class="controle-esquerda"> < </button>
-            <button class="controle-direita"> ➤ </button>
+            <button class="controle-esquerda"> <img src="img/seta-esquerda.png" alt="Seta para esquerda"> </button>
+            <button class="controle-direita"> <img src="img/seta-direita.png" alt="Seta para direita"> </button>
         </div>
         <div class="botao-redireciona-veiculos">
-            <button onclick="window.location.href='veiculos.html'"> Veja nossos veículos > </button>
+            <button onclick="window.location.href='veiculos.html'"> Veja nossos veículos </button>
         </div>
 
         <!-- Definições do canal de noticias -->
@@ -66,12 +66,18 @@
             <p> Acompanhe as últimas notícias da Ford </p>
         </div>
         <div class="imagem-noticias-ford">
-            <img src="img/imagem-teste.jfif" alt="Notícia 1">
-            <img src="img/imagem-teste.jfif" alt="Notícia 2">
-        </div>
-        <div class="botao-noticias-ford">
-            <button onclick="window.location.href=''"> </button>
-            <button onclick="window.location.href=''"> </button>
+            <div class="imagem-noticias">
+                <img src="img/imagem-teste.jfif" alt="Notícia 1">
+                <div class="botao-noticias">
+                    <button onclick="window.location.href=''"> Saiba mais</button>
+                </div>
+            </div>
+            <div class="imagem-noticias">
+                <img src="img/imagem-teste.jfif" alt="Notícia 2">
+                <div class="botao-noticias">
+                    <button onclick="window.location.href=''"> Saiba mais</button>
+                </div>
+            </div>
         </div>
 
     </main>
